fix style to prevent cutting off of words

--- a/src/modules/blocks/event-links/style.pcss
+++ b/src/modules/blocks/event-links/style.pcss
@@ -26,7 +26,7 @@
 			font-family: 'Helvetica', 'sans-serif';
 			font-weight: bold;
 			font-size: 1rem;
-			max-width: calc(100% - 12px);
+			max-width: 100%;
 			border: none;
 		}
 
